@@ -48,7 +48,7 @@ extern "C"
 	struct apol_permmap;
 
 /* forward declaration. the definition resides within domain-trans-analysis.c */
-	struct apol_domain_trans_table;
+	typedef struct apol_domain_trans_table apol_domain_trans_table_t;
 
 /* declared in perm-map.c */
 	typedef struct apol_permmap apol_permmap_t;
@@ -455,6 +455,12 @@ extern "C"
  * @param p Reference to an apol_permmap_t to destroy.
  */
 	void permmap_destroy(apol_permmap_t ** p);
+
+/**
+ *  Destroy the domain transition table freeing all memory used.
+ *  @param table Reference pointer to the table to be destroyed.
+ */
+	void domain_trans_table_destroy(apol_domain_trans_table_t ** table);
 
 #ifdef	__cplusplus
 }
